--- a/src/components/ProfileListPanel/styles.scss
+++ b/src/components/ProfileListPanel/styles.scss
@@ -62,5 +62,6 @@
 }
 
 .closedProfile {
-  color: #494849;
+  color: #696869 !important;
+  font-style: italic !important;
 }
